--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   dio: ^5.1.2
   video_thumbnail: ^0.5.3
   cached_network_image: ^3.2.3
+  blur: ^3.1.0
+
+
 
 dev_dependencies:
   flutter_test:
